--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                       <td>Full</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback.js'>Development</a> <small>(64k dev)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback.min.js'>Production</a> <small>(8k min+gzip)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback.js'>Development</a> <small>(dev, 64k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback.min.js'>Production</a> <small>(min+gzip, 8k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-full-stack.js'>Development</a> <small>(330k dev)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-full-stack.min.js'>Production</a> <small>(32k min+gzip)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-full-stack.js'>Development</a> <small>(dev, 330k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 32k)</small></li>
                         </ul>
                       </td>
                     </tr>
@@ -135,14 +135,14 @@
                       <td>Core</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core.js'>Development</a> <small>(54k dev)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core.min.js'>Production</a> <small>(7k min+gzip)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core.js'>Development</a> <small>(dev, 54k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core.min.js'>Production</a> <small>(min+gzip, 7k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core-stack.js'>Development</a> <small>(315k dev)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core-stack.min.js'>Production</a> <small>(31k min+gzip)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core-stack.js'>Development</a> <small>(dev, 315k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.16.4/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 31k)</small></li>
                         </ul>
                       </td>
                     </tr>
