Enhanced inject functionality and added tests

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -67,16 +67,14 @@
     <iframe src="knockback-collection-observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-view-model/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-utils/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
-    <!-- KNOCKOUT DIDN'T HAVE ko.utils.buildEvalWithinScopeFunction -->
-    <!-- <iframe src="knockback-inject/test-legacy.html" scrolling="auto" frameborder="0"></iframe> -->
+    <iframe src="knockback-inject/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
 
     <iframe src="knockback-defaults/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-formatting/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-localization/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback-triggering/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
 
-    <!-- KNOCKOUT DIDN'T HAVE ko.utils.buildEvalWithinScopeFunction -->
-    <!-- <iframe src="knockback-validation/test-legacy.html" scrolling="auto" frameborder="0"></iframe> -->
+    <iframe src="knockback-validation/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
 
     <iframe src="backbone-modelref/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone-relational/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
