--- a/tutorials_introduction.html
+++ b/tutorials_introduction.html
@@ -44,7 +44,7 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection (like Angular.js)</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -73,6 +73,8 @@
 <li><a href="tutorial_relational_models.html">Relational Models</a>: shows how to display and manipulate collections of Models stored in a Model&#39;s attributes. You can manage relationships by hand or using a compatible component like Backbone-Relational.js.</li>
 <li><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a>: shows how to add observables that automatically change when a global locale for your application changes.</li>
 <li><a href="tutorial_locale_manager.html">Custom Locale Manager</a> - shows how to store translated strings by locale in a simple locale manager and notify observers when the locale changes.</li>
+<li><a href="tutorial_inject.html">ViewModel Injection</a> (<strong>new!</strong>) - demonstrates how you can dynamically inject observables and ViewModels from your HTML in a similar way to AngularJS.</li>
+<li><a href="tutorial_knockback_inspector.html">Knockback-Inspector</a> - a walkthrough showing the steps followed to create Knockback-Inspector V1.0.</li>
 </ul>
 
         </section>
