--- a/app_todos.html
+++ b/app_todos.html
@@ -16,7 +16,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.5.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.6.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -48,7 +48,7 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection (like Angular.js)</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -75,67 +75,94 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page">
-        <section>
-          <h1>Tutorial: Knockback Todos App</h1><a href="http://kmalakoff.github.com/knockback-todos-app/">Try the demo</a>
-          <h2>Todos Architecture</h2>
-          <h3>Knockback follows the MVVM Pattern</h3>
-          <p>With the MVVM pattern, instead of Model, View, Controller you use Model, View, ViewModel. As an simple approximation using MVC terminology:</p>
-          <ul>
-            <li>Models are handled by Backbone.Models and Backbone.Collections</li>
-            <li>Views are handled by Templates (inline or jQuery)</li>
-            <li>ViewModels take the place of Controllers</li>
-          </ul>
-          <h3>MVVM in "Todos - Classic"</h3>
-          <p>The Classic application is an upgraded port of the Backbone Todos application so it has the same ORM with Todo (Backbone.Model) and TodoCollection (Backbone.Collection), but the two views are replaced by various ViewModels and templates for each section of the screen (SettingsViewModel, HeaderViewModel, TodosViewModel, FooterViewModel).</p>
-          <h4>Models (Backbone.Model + Backbone.Collection)</h4>
-          <ul>
-            <li><strong>Todo:</strong><span> provides the data and operations for a Todo like setting its complete state and saving changes on the server/local-storage</span></li>
-            <li><strong>TodoCollection:</strong><span> fetches models from the server and provides summary information on the Todo data like how many are completed, remaining, etc</span></li>
-          </ul>
-          <h4>ViewModels</h4>
-          <ul>
-            <li><strong>SettingsViewModel:</strong><span> provides properties to select the active filtering for Todos</span></li>
-            <li><strong>HeaderViewModel:</strong><span> provides properties to configure the new todo input element and provides a hook to the input element in the template so the ViewModel can create a new Todo Model when Enter is pressed</span></li>
-            <li><strong>TodosViewModel:</strong><span> provides the ViewModels to render each Todo in the collection</span></li>
-            <li><strong>FooterViewModel:</strong><span> provides and updates the summary stats attributes whenever the Todo list or one of its Todo models changes</span></li>
-          </ul>
-          <h3>MVVM in "Todos - Extended"</h3>
-          <p>This application extends the "Todos - Classic" by adding settings including todo priorities (display colors and orders), language selection and localized text, adding todos list sorting options (by name, created date, and priority). Along with the following changes:</p>
-          <h4>Models (Backbone.Model + Backbone.Collection)</h4>
-          <ul>
-            <li><strong>Priority:</strong><span> provides the data for the priority and color information that is saved on the server/local-storage. It could be a generic Backbone.Model but for clarity and consistency with the mock up, it is given a class.</span></li>
-            <li><strong>PriorityCollection:</strong><span> a very basic collection for fetching all of the priority settings</span></li>
-          </ul>
-          <h4>ViewModels</h4>
-          <ul>
-            <li><strong>PrioritiesViewModel:</strong><span> provides localized text (that shouldn't be saved to the server) and color properties to the 'priority-setting-template' template</span></li>
-            <li><strong>SettingsViewModel:</strong><span>provides the priority settings globally to the application, the current default priority and color for new tasks, a priority ranking to the TodosViewModel for sorting, the selected and available locales from the locale manager ('en', 'fr-FR', 'it-IT') into display strings ('EN', 'FR', 'IT'), todos sorting radio buttons.</span></li>
-            <li><strong>HeaderViewModel:</strong><span> upgraded to expose properties for rendering the current default Todo priority and a hook to show/hide the tooltip for selecting the default priority</span></li>
-            <li><strong>TodoViewModel:</strong><span> upgraded to expose properties for rendering its Todo priority and a hook to show/hide the tooltip for selecting the Todo priority</span></li>
-          </ul>
-          <h3>Localization</h3>
-          <p>Localization is key for the global applications we create today. It should not be an afterthought!</p>
-          <p>Knockback does not provide a locale manager (although there is a sample implementation with this todos application in: models/locale_manager.coffee) because different applications will retrieve their localized strings in different ways. Instead, Knockback provides a localization pattern by using a simpified Backbone.Model-like signature that hooks into Knockback like any other model:</p>
-          <ol>
-            <li>Emulate a simplified Backbone.Model through a get method like "get: (string_id) -> ..."</li>
-            <li>Mixin Backbone.Events '_.extend(LocaleManager.prototype, Backbone.Events)' and trigger Backbone.Events 'change' and 'change:\#{string_id}' like:</li>
-          </ol>
-          <pre data-for="cs">@trigger('change', @)
+      <content class="page"><h1>Tutorial: Knockback Todos App</h1>
+<p><a href="http://kmalakoff.github.com/knockback-todos-app/">Try the demo</a> or <a href="https://github.com/kmalakoff/knockback-todos-app">Look at the Code</a>
+
+</p>
+<h2>Todos Architecture</h2>
+<h3>Knockback follows the MVVM Pattern</h3>
+<p>With the MVVM pattern, instead of Model, View, Controller you use Model, View, ViewModel. As an simple approximation using MVC terminology:
+
+</p>
+<ul>
+<li>Models are handled by Backbone.Models and Backbone.Collections</li>
+<li>Views are handled by Templates (inline or jQuery)</li>
+<li>ViewModels take the place of Controllers</li>
+</ul>
+<h3>Knockback ViewModel Injection</h3>
+<p>Like <a href="http://angularjs.org/">AngularJS</a>, Knockback.js provides a mechanism through the <code>kb-inject</code> attribute or the data-bind <code>inject</code> Knockback custom binding to bind HTML Views without a central application control point.
+</p>
+
+        <pre>&lt;section id=&quot;todoapp&quot; kb-inject=&quot;AppViewModel&quot;&gt;
+  &lt;header id=&quot;header&quot;&gt;
+  ...
+&lt;/section&gt;
+</pre><p>Please look at the <a href="doc/classes/kb.html#injectViewModels-class">API Documentation</a> or the <a href="tutorial_inject.html">ViewModel Injection Tutorial</a> for more information and examples.
+
+</p>
+<h2>MVVM in &quot;Todos - Classic&quot;</h2>
+<p>The Classic application is an upgraded port of the Backbone Todos application so it has the same ORM with Todo (Backbone.Model) and TodoCollection (Backbone.Collection), but the application&#39;s Views are controlled by two ViewModels (AppViewModel and TodoViewModel).
+
+</p>
+<h3>Models (Backbone.Model + Backbone.Collection)</h3>
+<ul>
+<li><strong>Todo:</strong> provides the data and operations for a Todo like setting its complete state and saving changes on the server/local-storage.</li>
+<li><strong>TodoCollection:</strong> fetches models from the server and provides summary information on the Todo data like how many are completed, remaining, etc.</li>
+</ul>
+<h3>ViewModels</h3>
+<ul>
+<li><p><strong>AppViewModel:</strong> is bound directly in the View HTML and loads the Backbone.Collection with the Todos, to set up Knockout observables to control the sections of the application, to configure the page routing.</p>
+</li>
+<li><p><strong>TodoViewModel:</strong> is instantiated for each Backbone.Model in the todos Collection.</p>
+</li>
+</ul>
+<h2>MVVM in &quot;Todos - Extended&quot;</h2>
+<p>This application extends the &quot;Todos - Classic&quot; by adding settings including todo priorities (display colors and orders), language selection and localized text, adding todos list sorting options (by name, created date, and priority). Along with the following changes:
+
+</p>
+<h3>Models (Backbone.Model + Backbone.Collection)</h3>
+<ul>
+<li><p><strong>Priority:</strong> provides the data for the priority and color information that is saved on the server/local-storage. It could be a generic Backbone.Model but for clarity and consistency with the mock up, it is given a class.</p>
+</li>
+<li><p><strong>PriorityCollection:</strong> a very basic collection for fetching all of the priority settings</p>
+</li>
+</ul>
+<h3>ViewModels</h3>
+<ul>
+<li><p><strong>PrioritiesViewModel:</strong> provides localized text (that shouldn&#39;t be saved to the server) and color properties to the &#39;priority-setting-template&#39; template</p>
+</li>
+<li><p><strong>SettingsViewModel:</strong> provides the priority settings globally to the application, the current default priority and color for new tasks, a priority ranking to the TodosViewModel for sorting, the selected and available locales from the locale manager (&#39;en&#39;, &#39;fr-FR&#39;, &#39;it-IT&#39;, &#39;ja-JA&#39;) into display strings (&#39;EN&#39;, &#39;FR&#39;, &#39;IT&#39;, &#39;JA&#39;), todos sorting radio buttons.</p>
+</li>
+</ul>
+<h3>Localization</h3>
+<p>Localization is key for the global applications we create today. It should not be an afterthought!
+
+</p>
+<p>Knockback does not provide a locale manager (although there is a sample implementation with this todos application in: models/locale_manager.coffee) because different applications will retrieve their localized strings in different ways. Instead, Knockback provides a localization pattern by using a simpified Backbone.Model-like signature that hooks into Knockback like any other model:
+
+</p>
+<ul>
+<li>Emulate a simplified Backbone.Model through a get method like &quot;get: (string_id) -&gt; ...&quot;</li>
+<li>Mixin Backbone.Events &#39;_.extend(LocaleManager.prototype, Backbone.Events)&#39; and trigger Backbone.Events &#39;change&#39; and &#39;change:string_id&#39; like:</li>
+</ul>
+
+        <pre data-for="cs">@trigger('change', @)
 @trigger(&quot;change:\#{key}&quot;, value) for key, value of @translations_by_locale[@locale_identifier]
 </pre>
-          <pre data-for="js">this.trigger('change', @);
+        <pre data-for="js">this.trigger('change', @);
 for (var key in this.translations_by_locale[this.locale_identifier]) {
   this.trigger(&quot;change:\#{key}&quot;, this.translations_by_locale[this.locale_identifier][key]);
 }
+</pre><p>Register your custom locale manager like:
+</p>
+
+        <pre data-for="cs">kb.locale_manager = new MyLocaleManager()
 </pre>
-          <p>Register your custom locale manager like:</p>
-          <pre data-for="cs">kb.locale_manager = new MyLocaleManager()
-</pre>
-          <pre data-for="js">kb.locale_manager = new MyLocaleManager();
-</pre>
-          <p>Also, if you want to perform some specialized formatting above and beyond a string lookup, you can provide custom localizer classes derived from kb.LocalizedObservable:</p>
-          <pre data-for="cs">class LongDateLocalizer extends kb.LocalizedObservable
+        <pre data-for="js">kb.locale_manager = new MyLocaleManager();
+</pre><p>Also, if you want to perform some specialized formatting above and beyond a string lookup, you can provide custom localizer classes derived from kb.LocalizedObservable:
+</p>
+
+        <pre data-for="cs">class LongDateLocalizer extends kb.LocalizedObservable
   constructor: -&gt; return super
   read: (value) -&gt;
     return Globalize.format(value, Globalize.cultures[kb.locale_manager.getLocale()].calendars.standard.patterns.f, kb.locale_manager.getLocale())
@@ -143,7 +170,7 @@ for (var key in this.translations_by_locale[this.locale_identifier]) {
     new_value = Globalize.parseDate(localized_string, Globalize.cultures[kb.locale_manager.getLocale()].calendars.standard.patterns.d, kb.locale_manager.getLocale())
     value.setTime(new_value.valueOf())
     </pre>
-          <pre data-for="js">var LongDateLocalizer =  kb.LocalizedObservable.extend({
+        <pre data-for="js">var LongDateLocalizer =  kb.LocalizedObservable.extend({
   constructor: function LongDateLocalizer() {
     return LongDateLocalizer.__super__.constructor.apply(this, arguments);
   },
@@ -158,32 +185,39 @@ for (var key in this.translations_by_locale[this.locale_identifier]) {
     return value.setTime(new_value.valueOf());
   }
 });
-</pre><strong>Note:</strong><span> kb.LocalizedObservable's constructor actually returns a ko.computed (not the instance itself) so you either need to return super result or if you have custom initialization, return the underlying observable using the following helper: 'kb.wrappedObservable(this)'</span>
-          <p>As for the "Todos - Knockout Complete" demo...</p>
-          <p>You can simply watch an attribute on the locale manager as follows:</p>
-          <pre data-for="cs">HeaderViewModel = -&gt;
+</pre><p><strong>Note:</strong> kb.LocalizedObservable&#39;s constructor actually returns a ko.computed (not the instance itself) so you either need to return super result or if you have custom initialization, return the underlying observable using the following helper: &#39;kb.wrappedObservable(this)&#39;
+
+</p>
+<p>You can simply watch an attribute on the locale manager as follows:
+</p>
+
+        <pre data-for="cs">AppViewModel = -&gt;
   ...
   @input_placeholder_text = kb.observable(kb.locale_manager, {key: 'placeholder_create'})
   </pre>
-          <pre data-for="js">var HeaderViewModel = function() {
+        <pre data-for="js">var AppViewModel = function() {
   ...
   this.input_placeholder_text = kb.observable(kb.locale_manager, {key: 'placeholder_create'});
 };
-</pre>
-          <p>Or model attributes can be localized automatically when your locale manager triggers a change:</p>
-          <pre data-for="cs">TodoViewModel = (model) -&gt;
+</pre><p>Or model attributes can be localized automatically when your locale manager triggers a change:
+</p>
+
+        <pre data-for="cs">TodoViewModel = (model) -&gt;
   ...
   @completed = kb.observable(model, {key: 'completed', localizer: LongDateLocalizer})
   </pre>
-          <pre data-for="js">var TodoViewModel = function(model) {
+        <pre data-for="js">var TodoViewModel = function(model) {
   ...
   this.completed = kb.observable(model, {key: 'completed', localizer: LongDateLocalizer});
 };
-</pre>
-          <h3>Lazy Loading</h3>
-          <p>By using Knockback with [Backbone.ModelRef][https://github.com/kmalakoff/backbone-modelref], you can start rendering your views before the models are loaded.</p>
-          <p>As demonstration, you can see that the colors arrive a little after the rendering. It is achieved by passing model references instead of models to the settings view model:</p>
-          <pre data-for="cs">SettingsViewModel = (priorities) -&gt;
+</pre><h2>Lazy Loading</h2>
+<p>By using Knockback with <a href="https://github.com/kmalakoff/backbone-modelref">Backbone.ModelRef</a>, you can start rendering your views before the models are loaded.
+
+</p>
+<p>As demonstration, you can see that the colors arrive a little after the rendering. It is achieved by passing model references instead of models to the settings view model:
+</p>
+
+        <pre data-for="cs">SettingsViewModel = (priorities) -&gt;
   @priorities = ko.observableArray(_.map(priorities, (model)-&gt; return new PrioritiesViewModel(model)))
   ...
 window.app.viewmodels.settings = new SettingsViewModel([
@@ -192,7 +226,7 @@ window.app.viewmodels.settings = new SettingsViewModel([
   new Backbone.ModelRef(priorities, 'low')
 ])
 </pre>
-          <pre data-for="js">var SettingsViewModel = function(priorities) {
+        <pre data-for="js">var SettingsViewModel = function(priorities) {
   this.priorities = ko.observableArray(_.map(priorities, (model)-&gt; return new PrioritiesViewModel(model)));
   ...
 window.app.viewmodels.settings = new SettingsViewModel([
@@ -200,9 +234,10 @@ window.app.viewmodels.settings = new SettingsViewModel([
   new Backbone.ModelRef(priorities, 'medium'),
   new Backbone.ModelRef(priorities, 'low')
 ]);
-</pre>
-          <p>and then lazy fetching them (which creates them if they don't exist):</p>
-          <pre data-for="cs"># Load the prioties late to show the dynamic nature of Knockback with Backbone.ModelRef
+</pre><p>and then lazy fetching them (which creates them if they don&#39;t exist):
+</p>
+
+        <pre data-for="cs"># Load the prioties late to show the dynamic nature of Knockback with Backbone.ModelRef
 _.delay((-&gt;
   priorities.fetch(
     success: (collection) -&gt;
@@ -213,7 +248,7 @@ _.delay((-&gt;
   ...
 ), 1000)
 </pre>
-          <pre data-for="js">// Load the prioties late to show the dynamic nature of Knockback with Backbone.ModelRef
+        <pre data-for="js">// Load the prioties late to show the dynamic nature of Knockback with Backbone.ModelRef
 _.delay(function() {
   priorities.fetch({
     success: function(collection) {
@@ -224,7 +259,6 @@ _.delay(function() {
   });
   ...
 }), 1000);</pre>
-        </section>
       </content>
       <footer class="page">
       </footer>
