--- a/tutorial_knockback_inspector.html
+++ b/tutorial_knockback_inspector.html
@@ -16,7 +16,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.5.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.6.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -48,7 +48,7 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection (like Angular.js)</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -78,7 +78,7 @@
               <div id="collapseOverview" style="height: 0px;" class="accordion-body collapse">
                 <div class="accordion-inner">
                   <p>Let's start with the goals of a simple model and collection inspector...</p>
-                  <h4>Model Inspector Goals</h4>
+                  <h4>Model Injectionspector Goals</h4>
                   <ul>
                     <li>For each simple-typed attribute, provide a label for the attribute name and a text box to edit the value</li>
                     <li>For each model-typed attribute, provide a collapsable node with the attribute name and when opened, allow each model attribute to be inspected by type</li>
@@ -336,7 +336,7 @@
   
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src='vendor/jquery-1.8.0.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/knockback-core-stack-0.16.5.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/knockback-core-stack-0.16.6.js'&gt;&lt;/script&gt;
   &lt;script src='vendor/backbone-relational-0.6.0.js'&gt;&lt;/script&gt;
   
   &lt;!-- APPLICATION STYLING --&gt;
@@ -422,7 +422,7 @@ this.kbi.VERSION = '0.1.0';</pre>
   
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src='vendor/jquery-1.8.0.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/knockback-core-stack-0.16.5.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/knockback-core-stack-0.16.6.js'&gt;&lt;/script&gt;
   &lt;script src='vendor/backbone-relational-0.6.0.js'&gt;&lt;/script&gt;
   
   &lt;!-- KNOCKBACK-INSPECTOR LIBRARY --&gt;
