--- a/tutorial_locale_manager.html
+++ b/tutorial_locale_manager.html
@@ -16,7 +16,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.5.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.6.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="js/stylecode.js"></script>
@@ -48,7 +48,7 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection (like Angular.js)</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -174,10 +174,7 @@ view_model = kb.viewModel(bob)
 # add a localized label for 'name' and a function for toggling the current locale
 view_model.label_name = kb.observable(simple_locale_manager, 'name')
 view_model.toggleLocale = ->
-  if (simple_locale_manager.getLocale() == 'en')
-    simple_locale_manager.setLocale('fr')
-  else
-    simple_locale_manager.setLocale('en')
+  simple_locale_manager.setLocale(if (simple_locale_manager.getLocale() is 'en') then 'fr' else 'en')
 
 ko.applyBindings(view_model, $('#lm_simple')[0])</pre>
                   <pre data-for="js">// create and initialize the locale manager with two languages
@@ -197,11 +194,7 @@ var view_model = kb.viewModel(bob);
 // add a localized label for 'name' and a function for toggling the current locale
 view_model.label_name = kb.observable(simple_locale_manager, 'name');
 view_model.toggleLocale = function() {
-  if (simple_locale_manager.getLocale() === 'en') {
-    return simple_locale_manager.setLocale('fr');
-  } else {
-    return simple_locale_manager.setLocale('en');
-  }
+  return simple_locale_manager.setLocale(simple_locale_manager.getLocale() === 'en' ? 'fr' : 'en');
 };
 
 ko.applyBindings(view_model, $('#lm_simple')[0]);</pre>
@@ -272,9 +265,7 @@ _.extend(LocaleManager.prototype, Backbone.Events)</pre>
 
     // add arguments
     arguments = Array.prototype.slice.call(arguments, 1);
-    for (var index = _i = 0; _i < arguments.length; index = ++_i) {
-      string = string.replace("{" + index + "}", arguments[index]);
-    }
+    for (var index = _i = 0; _i < arguments.length; index = ++_i) { string = string.replace("{" + index + "}", arguments[index]); }
     return string;
   };
 
@@ -283,9 +274,7 @@ _.extend(LocaleManager.prototype, Backbone.Events)</pre>
     this.current_locale(locale_identifier);
     this.trigger('change', this);
     var map = this.translations_by_locale[this.current_locale()];
-    for (key in map) {
-      this.trigger("change:" + key, map[key]);
-    }
+    for (key in map) { this.trigger("change:" + key, map[key]); }
   };
 
   this.getLocales = function() {
@@ -298,8 +287,7 @@ _.extend(LocaleManager.prototype, Backbone.Events)</pre>
   };
 };
 
-_.extend(LocaleManager.prototype, Backbone.Events);
-</pre>
+_.extend(LocaleManager.prototype, Backbone.Events);</pre>
           <p></p>
           <h3>Bulk Localized Form Labels</h3>
           <p></p>
@@ -344,10 +332,7 @@ view_model = kb.viewModel(new Backbone.Model({name: 'Bob', start_date: '1/1/2012
 # use ko.observable to create multiple labels quickly
 view_model.labels = kb.viewModel(bulk_locale_manager, ['name', 'start_date', 'end_date'])
 view_model.toggleLocale = ->
-  if (bulk_locale_manager.getLocale() == 'en')
-    bulk_locale_manager.setLocale('fr')
-  else
-    bulk_locale_manager.setLocale('en')
+  bulk_locale_manager.setLocale(if (bulk_locale_manager.getLocale() is 'en') then 'fr' else 'en')
 
 ko.applyBindings(view_model, $('#lm_bulk_labels')[0])</pre>
                   <pre data-for="js">var bulk_locale_manager = new LocaleManager('en', {
@@ -363,24 +348,15 @@ ko.applyBindings(view_model, $('#lm_bulk_labels')[0])</pre>
   }
 });
 
-var view_model = kb.viewModel(new Backbone.Model({
-  name: 'Bob',
-  start_date: '1/1/2012',
-  end_date: '1/2/2012'
-}));
+var view_model = kb.viewModel(new Backbone.Model({name: 'Bob', start_date: '1/1/2012', end_date: '1/2/2012'}));
 
 // use ko.observable to create multiple labels quickly
-view_model.labels = kb.observables(bulk_locale_manager, ['name', 'start_date', 'end_date']);
+view_model.labels = kb.viewModel(bulk_locale_manager, ['name', 'start_date', 'end_date']);
 view_model.toggleLocale = function() {
-  if (bulk_locale_manager.getLocale() === 'en') {
-    return bulk_locale_manager.setLocale('fr');
-  } else {
-    return bulk_locale_manager.setLocale('en');
-  }
+  return bulk_locale_manager.setLocale(bulk_locale_manager.getLocale() === 'en' ? 'fr' : 'en');
 };
 
-ko.applyBindings(view_model, $('#lm_bulk_labels')[0]);
-</pre>
+ko.applyBindings(view_model, $('#lm_bulk_labels')[0]);</pre>
                 </div>
               </div>
             </div>
