--- a/tutorial_nested_models.html
+++ b/tutorial_nested_models.html
@@ -16,7 +16,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.5.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.16.6.js"></script>
     <script type="application/javascript" src="vendor/js/backbone-relational-0.6.0.js"></script>
     <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
@@ -49,7 +49,7 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection (like Angular.js)</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_collection_observable.html">kb.CollectionObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_inject.html">ViewModel Injection</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
@@ -92,7 +92,7 @@
                 <div id="kbnm_collection_observables_view" class="tab-pane active">
                   <pre>&lt;div id='kbnm_collection_observables' data-bind=&quot;foreach: people&quot;&gt;
   &lt;p&gt;Type: &lt;span data-bind=&quot;text: type&quot;&gt;&lt;/span&gt;&lt;/p&gt;
-  &lt;p&gt;Name: &lt;input class='input-small pull-right' data-bind=&quot;value: name&quot;/&gt;&lt;/p&gt;
+  &lt;p&gt;Name: &lt;input class='input-small pull-right' data-bind=&quot;value: name, valueUpdate: 'keyup'&quot;/&gt;&lt;/p&gt;
 
   &lt;div data-bind=&quot;foreach: friends&quot;&gt;
     &lt;p&gt;Friend Type: &lt;span data-bind=&quot;text: type&quot;&gt;&lt;/span&gt; &lt;span class=&quot;pull-right&quot; &gt;Name: &lt;span data-bind=&quot;text: name&quot;&gt;&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;
@@ -106,7 +106,7 @@ fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([bob])
 FriendViewModel = (model) ->
   @name = kb.observable(model, 'name')
   @type = ko.observable('friend')
-  @
+  return
 
 class PersonViewModel extends kb.ViewModel
   constructor: (model, options) ->
@@ -128,7 +128,6 @@ var fred = new Backbone.Model({name: "Fred", friends: new Backbone.Collection([b
 var FriendViewModel = function(model) {
   this.name = kb.observable(model, 'name');
   this.type = ko.observable('friend');
-  return this;
 };
 
 var PersonViewModel = kb.ViewModel.extend({
@@ -156,7 +155,7 @@ ko.applyBindings(view_model, $('#kbnm_collection_observables')[0]);
               <h4>Live Result</h4>
               <div class="demos_result_box"><div id='kbnm_collection_observables' data-bind="foreach: people">
   <p>Type: <span data-bind="text: type"></span></p>
-  <p>Name: <input class='input-small pull-right' data-bind="value: name"/></p>
+  <p>Name: <input class='input-small pull-right' data-bind="value: name, valueUpdate: 'keyup'"/></p>
 
   <div data-bind="foreach: friends">
     <p>Friend Type: <span data-bind="text: type"></span> <span class="pull-right" >Name: <span data-bind="text: name"></span></span></p>
@@ -178,7 +177,7 @@ ko.applyBindings(view_model, $('#kbnm_collection_observables')[0]);
                 <div id="kbnm_view_models_view" class="tab-pane active">
                   <pre>&lt;div id='kbnm_view_models'&gt;
   &lt;p&gt;Type: &lt;span data-bind=&quot;text: type&quot;&gt;&lt;/span&gt;&lt;/p&gt;
-  &lt;p&gt;Name: &lt;input class='input-small pull-right' data-bind=&quot;value: name&quot;/&gt;&lt;/p&gt;
+  &lt;p&gt;Name: &lt;input class='input-small pull-right' data-bind=&quot;value: name, valueUpdate: 'keyup'&quot;/&gt;&lt;/p&gt;
 
   &lt;div data-bind=&quot;foreach: friends&quot;&gt;
     &lt;p&gt;Friend Type: &lt;span data-bind=&quot;text: type&quot;&gt;&lt;/span&gt; &lt;span class=&quot;pull-right&quot; &gt;Name: &lt;span data-bind=&quot;text: name&quot;&gt;&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;
@@ -197,7 +196,7 @@ FriendViewModel = (model, options) ->
   @type = 'friend'
   @name = kb.observable(model, 'name')
   @friends = kb.collectionObservable(model.get('friends'), kb.utils.optionsPathJoin(options, 'friends'))
-  @
+  return
 
 class PersonViewModel extends kb.ViewModel
   constructor: (model, options) ->
@@ -219,7 +218,6 @@ var FriendViewModel = function(model, options) {
   this.type = 'friend';
   this.name = kb.observable(model, 'name');
   this.friends = kb.collectionObservable(model.get('friends'), kb.utils.optionsPathJoin(options, 'friends'));
-  return this;
 };
 
 var PersonViewModel = kb.ViewModel.extend({
@@ -244,7 +242,7 @@ ko.applyBindings(view_model, $('#kbnm_view_models')[0]);</pre>
               <h4>Live Result</h4>
               <div class="demos_result_box"><div id='kbnm_view_models'>
   <p>Type: <span data-bind="text: type"></span></p>
-  <p>Name: <input class='input-small pull-right' data-bind="value: name"/></p>
+  <p>Name: <input class='input-small pull-right' data-bind="value: name, valueUpdate: 'keyup'"/></p>
 
   <div data-bind="foreach: friends">
     <p>Friend Type: <span data-bind="text: type"></span> <span class="pull-right" >Name: <span data-bind="text: name"></span></span></p>
