--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ how Knockback provides internationalization to your applications.
               <div class="span3"><h2>Frameworks</h2>
 <ul>
 <li><a href="https://github.com/thedrow/django-knockback">django-knockback</a></li>
+<li><a href="https://github.com/skie/CakePHP-Knockback-Plugin">CakePHP-Knockback-Plugin</a></li>
 </ul>
 
               </div>
